# vcpkg-sample-library

./: CMakeLists.txt  my_sample_lib.cpp
